      "mg-manual" or one of the other alternatives instead.
  * A change in the behavior of the "calcenergy" keyword; passing an argument
    of 2 to this keyword now prints out per-atom energies in addition to the
    energy component information
  * A new option has been added to tools/manip/acc to give per-atom solvent-
    accessible surface area contributions
  * Added tools/mesh/dxmath for performing arithmetic on grid-based data (i.e.,
    adding potential results from two calculations, etc.)
  * Added tools/mesh/uhbd_asc2bin for converting UHBD-format grid files from
    ASCII to binary (contributed by Dave Sept)
  * Improvement of VMD visualization scripts (contributed by Dave Sept)
  * The API has changed significantly; please see the Programmer's Manual.

#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.0       03-20-02
#############################################################################
This version is a public (beta) release candidate and includes:
  * Slight modification of the user and programmer's guides
  * Scripts for visualization of potential results in VMD (Contributed by Dave
    Sept)
  * Corrections to some of the example input files
  * A few additional API features
This release requires a new version of MALOC.

#############################################################################
PRE-BETA (NOT FOR PUBLIC RELEASE) VERSION 0.1.8       01-29-02
#############################################################################
This version is a public (beta) release candidate and includes the following
bug-fixes:
  * Added warning to parallel focusing 
  * Added several test cases and validated the current version of the code for
    all but one (see examples/README.html)
  * Fixed atom partitioning bug and external energy evaluation during focusing
  * Added new program for converting OpenDX format files to MOLMOL (by
    Jung-Hsin Lin)